# ClauseOps

./: .gitignore  README.md  alembic.ini  phases wise implementation.docx  pyproject.toml  requirements-backend.txt  requirements.txt
PROJECT IDEA/: ClauseOps_Clause_Segmentation_Deep_Dive.md  ClauseOps_Complete_Blueprint.md  ClauseOps_Phase3_NER.md  ClauseOps_Segmentation_v2_Fixes.md
app/: __init__.py  config.py  db.py  main.py
app/analysis/: extractor.py  temporal.py
app/auth/: __init__.py  security.py  test_security.py
app/automation/: scheduler.py  task_engine.py
app/data/: __init__.py  database.py  enums.py  models.py  ownership.py  test_contract_status_property.py  test_models_validation.py  test_ownership.py  test_ownership_property.py
app/ingestion/: document_loader.py  segmenter.py  text_cleaner.py  text_extractor.py
app/processing/: __init__.py  celery_app.py  enqueue.py  ml.py  progress.py  reminders.py  spans.py  test_grounding_property.py  test_integration.py  test_ml.py  test_no_guessed_deadlines_property.py  test_progress.py  test_progress_bounds_property.py  test_reminder_idempotence_property.py  test_reminders.py  test_span_bounds_property.py  test_spans.py
app/storage/: __init__.py  base.py  local.py
app/web/: __init__.py  auth_router.py  contracts_router.py  dashboard_router.py  dependencies.py  main.py  notifications_router.py  progress_router.py  review_router.py  revocation.py  schemas.py  (+14 more)
backend/: parser.py
clauseops/: Limitation.txt  __init__.py  app.py
migrations/: README.md  env.py
scripts/: find_testable_pdfs.py
(+129 files in other folders)
