[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "clauseops"
version = "0.1.0"
description = "AI-Powered Legal Contract Intelligence System — Clause Segmentation Module"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "PyMuPDF>=1.24.0",
    "spacy>=3.7.0",
    "spacy-transformers>=1.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
ml = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "datasets>=2.19.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["clauseops*"]
